# pico_llama

./: CLAUDE.md  CMakeLists.txt  README.md  generate.c  generate.h  main.c  pico-llm-briefing.md  psram.c  psram.h  sampler.c  sampler.h  tokenizer.c  tokenizer.h  transformer.c  transformer.h
